src/css/App.css
@import "tailwindcss";

.main-button {
  @apply rounded-[3rem] no-underline m-0
  shadow-xl shadow-green-500/50
  text-[black-100] font-sans font-extrabold border-[1px] border-[#4BCE4B] flex items-center justify-center
  hover:bg-green-700
  hover:text-white
  active:scale-90;
}

.main-button:focus {
  @apply outline-none;
  @apply ring-4 ring-green-300;
  @apply dark:ring-green-800;
}

.modal-content {
  @apply fixed top-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-[#F0F0F0] border-3 border-black rounded-lg shadow-xl shadow-green-500/50 w-[50vw] p-2 z-1000 text-center text-xl;
}

.modal-overlay {
  @apply w-full h-full fixed top-1/2 left-1/2 transform -translate-y-1/2 z-1000
}

.modal-overlay {
  @apply w-full h-full fixed top-1/2 left-1/2 transform -translate-y-1/2 z-1000
}

.modal-overlay {
  @apply w-full h-full fixed top-1/2 left-1/2 transform -translate-y-1/2 z-1000
}

.modal-overlay {
  @apply w-full h-full fixed top-1/2 left-1/2 transform -translate-y-1/2 z-1000
}

.pipe {
  @apply w-full;
}

html {
  background: url("/src/assets/plumbing1.png");
  background-repeat: no-repeat;
  background-size: cover;
}

body {
  width: 100vw;
}

#root {
  max-width: 100vw;
  margin: 0 auto;
  text-align: center;
}

.book-online {
  background-image: url("/src/assets/plumbing2.png");
  background-repeat: no-repeat;
  background-size: cover;
}

button.services {
  background-color: rgb(76, 227, 76);
  background-image: url("/src/assets/plumbing5.png");
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 10px;
}

button.services:active {
  transform: scale(0.9);
}

.modal-close {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

/* Styling for Message component */
.success {
  background-color: green;
}

.failure {
  background-color: red;
}

:disabled {
  cursor: not-allowed;
  opacity: 50%;
}

.day-wrapper {
  @apply flex flex-row;
}

.day-header {
  @apply text-sm font-bold bg-[#f0f0f0];
}

.button-grid {
  @apply grid grid-cols-1;
}

.slot-button {
  @apply text-white bg-gradient-to-r from-green-500 via-green-600 to-green-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-green-300 dark:focus:ring-green-800 font-medium rounded-lg text-sm text-center me-2 mb-2;
}

